--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.21",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "firebase": "^9.9.0",
     "framer-motion": "^6.3.3",
+    "postcss": "^8.5.6",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
